# 25_rescue-Hiro_version-

./: .gitignore  README.md
src/core/: CMakeLists.txt  package.xml
src/core/msg/: BallDepth.msg  BallPosition.msg  Calibrate.msg
src/core/src/: main.cpp
src/core/src/classes/: ball.cpp  ball.h  car.cpp  car.h  field.hpp
src/core/srv/: PickRelease.srv
src/core_new/: CMakeLists.txt  package.xml
src/core_new/src/: main.cpp
src/core_new/src/classes/: ball.cpp  ball.h  car.cpp  car.h
src/elrs_receiver/: CMakeLists.txt  package.xml
src/elrs_receiver/src/: elrs_receiver_node.cpp
src/ros_tools/: CMakeLists.txt  package.xml
src/ros_tools/msg/: BallPos.msg  BallPoss.msg
src/ros_tools/scripts/: Image2h264.py  camera.py  show_h264.py
src/ros_tools/src/: front_camera_node.cpp  lidar_data_node.cpp
src/vel_control/: package.xml  setup.cfg  setup.py
src/vel_control/launch/: multi_task_launch.py
src/vel_control/vel_control/: motor_gpio_control.py  motor_node.py  position_publisher.py
src/vision/: CMakeLists.txt  package.xml  setup.py
src/vision/scripts/: ball_calibration.py  ball_depth.py
src/vision/src/: calibrate_filter.cpp  livox_to_pointcloud2.cpp  point_detect_node.cpp
src/yolov8/: package.xml  setup.py
src/yolov8/resource/: ball.rknn
src/yolov8/yolov8/: ball_yolov8.py
